tests/matrices/invalid/invalid_vector_index_out_of_range_2.mtx
%%MatrixMarket vector coordinate real general
4 3
1 101
200 22
4 404
